// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Animations/Scale Basic 1`] = `
<div>
  <div
    className="center"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "height": "250px",
        }
      }
    >
      <div
        className="marginFlexContainer"
      >
        <button
          className="button large fill"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          start from top, left to right
        </button>
        <button
          className="button large fill"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          start from top, center
        </button>
        <button
          className="button large fill"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          start from top, right to left
        </button>
      </div>
      <div
        className="marginFlexContainer"
      >
        <button
          className="button large fill"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          start from the middle, left to right
        </button>
        <button
          className="button large fill"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          pop from center
        </button>
        <button
          className="button large fill"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          start from middle, right to left
        </button>
      </div>
      <div
        className="marginFlexContainer"
      >
        <button
          className="button large fill"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          start from bottom, left to right
        </button>
        <button
          className="button large fill"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          start from bottom, center
        </button>
        <button
          className="button large fill"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          start from bottom, right to left
        </button>
      </div>
      <div
        className="marginFlexContainer"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Animations/Slide Basic 1`] = `
<div>
  <div
    className="center"
  >
    <div
      style={
        Object {
          "height": "150px",
        }
      }
    >
      <div
        className="marginFlexContainer"
      >
        <button
          className="button large fill"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          up
        </button>
        <button
          className="button large fill"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          right
        </button>
        <button
          className="button large fill"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          down
        </button>
        <button
          className="button large fill"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          left
        </button>
      </div>
      <div
        style={
          Object {
            "overflow": "hidden",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Button Default 1`] = `
<div>
  <div
    className="center"
  >
    <button
      className="button large fill"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Text
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Button Disable 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="marginFlexContainer"
    >
      <button
        className="button large fill"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Enable
      </button>
      <button
        className="button large fill"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        Disabled
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Button Play Ground 1`] = `
<div>
  <div
    className="center"
  >
    <button
      className="button large fill"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Button Text
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Button Sizes 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="marginFlexContainer"
    >
      <button
        className="button large fill"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Large
      </button>
      <button
        className="button medium fill"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        medium
      </button>
      <button
        className="button small fill"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        small
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Button Variants 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="marginFlexContainer"
    >
      <button
        className="button large fill"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        fill
      </button>
      <button
        className="button large outline"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        outline
      </button>
      <button
        className="button large ghost"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        ghost
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Button With Class Name 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="marginFlexContainer"
    >
      <button
        className="button large fill successBackgroundColor"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Text
      </button>
      <button
        className="button large outline alertColor"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Text
      </button>
      <button
        className="button large ghost errorColor"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Text
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Button With Icon 1`] = `
<div>
  <div
    className="center"
  >
    <button
      className="button large fill"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span
        className="leadingIcon"
      >
        <svg />
      </span>
      leading
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Checkbox Default 1`] = `
<div>
  <div
    className="center"
  >
    <label
      className="checkbox enabled"
      htmlFor="checkbox-example"
    >
      <input
        checked={false}
        className="parent"
        disabled={false}
        id="checkbox-example"
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="iconContainer"
      />
    </label>
    <label
      className="checkboxLabel"
      htmlFor="checkbox-example"
    >
      Check me out!
    </label>
  </div>
</div>
`;

exports[`Storyshots Components/Checkbox Playground 1`] = `
<div>
  <div
    className="center"
  >
    <label
      className="checkbox enabled"
      htmlFor="checkbox-playground"
    >
      <input
        checked={false}
        className="parent"
        disabled={false}
        id="checkbox-playground"
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="iconContainer"
      />
    </label>
    <label
      className="checkboxLabel"
      htmlFor="checkbox-playground"
    >
      Hit me!
    </label>
  </div>
</div>
`;

exports[`Storyshots Components/Checkbox States 1`] = `
<div>
  <div
    className="center"
  >
    <label
      className="checkbox checked enabled microMargin"
    >
      <input
        checked={true}
        className="parent"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="iconContainer"
      >
        <svg />
      </span>
    </label>
    <label
      className="checkbox enabled microMargin"
    >
      <input
        checked={false}
        className="parent"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="iconContainer"
      />
    </label>
    <label
      className="checkbox checked disabled microMargin"
    >
      <input
        checked={true}
        className="parent"
        disabled={true}
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="iconContainer"
      >
        <svg />
      </span>
    </label>
    <label
      className="checkbox indeterminate enabled microMargin"
    >
      <input
        checked={false}
        className="parent"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="iconContainer"
      >
        <svg />
      </span>
    </label>
    <label
      className="checkbox disabled microMargin"
    >
      <input
        checked={false}
        className="parent"
        disabled={true}
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="iconContainer"
      />
    </label>
  </div>
</div>
`;

exports[`Storyshots Components/Chip Default 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="chip focusable clickable"
      data-testid="chip"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="leadingIcon"
      >
        <svg />
      </div>
      <span
        className="label"
      >
        Chocolate
      </span>
      <button
        className="trailingIcon trailingIconClickable"
        disabled={false}
        onClick={[Function]}
      >
        <svg />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Chip Playground 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="chip focusable clickable microMargin"
      data-testid="chip"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      <span
        className="label"
      >
        Chip
      </span>
      <button
        className="trailingIcon trailingIconClickable"
        disabled={false}
        onClick={[Function]}
      >
        <svg />
      </button>
    </div>
    <small
      className="tinyText"
    >
      Try focusing the chip using your keyboard, then clicking on backspace!
    </small>
  </div>
</div>
`;

exports[`Storyshots Components/Chip Variants 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="chip microMargin"
      data-testid="chip"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
    >
      <span
        className="label"
      >
        Simple
      </span>
    </div>
    <div
      className="chip focusable clickable microMargin"
      data-testid="chip"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      <span
        className="label"
      >
        Clickable
      </span>
    </div>
    <div
      aria-disabled={true}
      className="chip disabled microMargin"
      data-testid="chip"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
    >
      <span
        className="label"
      >
        Disabled
      </span>
    </div>
    <div
      className="chip microMargin"
      data-testid="chip"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
    >
      <div
        className="leadingIcon"
      >
        <svg />
      </div>
      <span
        className="label"
      >
        Leading Icon
      </span>
    </div>
    <div
      className="chip microMargin"
      data-testid="chip"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
    >
      <span
        className="label"
      >
        Trailing Icon
      </span>
      <button
        className="trailingIcon"
        disabled={false}
        onClick={[Function]}
      >
        <svg />
      </button>
    </div>
    <div
      className="chip microMargin"
      data-testid="chip"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
    >
      <div
        className="leadingIcon"
      >
        <svg />
      </div>
      <span
        className="label"
      >
        Both Icons
      </span>
      <button
        className="trailingIcon"
        disabled={false}
        onClick={[Function]}
      >
        <svg />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ChipsInput Custom Chip Validation 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="flexColumn"
    >
      <span
        className="marginFlexContainer"
      >
        Only chips that contain 
        <b>
          abc
        </b>
         can be submitted.
      </span>
      <div
        className="ChipsInput"
      >
        <div
          className="container"
          onKeyDown={[Function]}
        >
          <div
            className="inputBase text inputBase"
          >
            <input
              autoComplete="off"
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Input text in here"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ChipsInput Default 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="flexColumn"
    >
      <div
        className="ChipsInput"
      >
        <div
          className="container"
          onKeyDown={[Function]}
        >
          <div
            className="inputBase text inputBase"
          >
            <input
              autoComplete="off"
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Input text in here"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="microMargin"
      />
      <div
        className="ChipsInput"
      >
        <div
          className="container"
          onKeyDown={[Function]}
        >
          <div
            aria-disabled={true}
            className="chip disabled chipStyle"
            data-testid="chip"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
          >
            <span
              className="label"
            >
              first
            </span>
          </div>
          <div
            aria-disabled={true}
            className="chip disabled chipStyle"
            data-testid="chip"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
          >
            <span
              className="label"
            >
              second
            </span>
          </div>
          <div
            aria-disabled={true}
            className="chip disabled chipStyle"
            data-testid="chip"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
          >
            <div
              className="leadingIcon"
            >
              <svg />
            </div>
            <span
              className="label"
            >
              third with icon
            </span>
          </div>
          <div
            className="inputBase text disabled inputBase"
          >
            <input
              autoComplete="off"
              disabled={true}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="+ Input text in here"
              type="text"
              value="Disabled Input"
            />
            <div
              className="trailingIcon"
            >
              <button
                aria-label="remove all"
                className="button large ghost iconButton small ghost"
                disabled={true}
                onClick={[Function]}
                type="button"
              >
                <svg
                  className="cancelIcon"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ChipsInput Get Icon Handler 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="flexColumn"
    >
      <span
        className="marginFlexContainer"
      >
        Insert 
        <b>
          first
        </b>
         for 
        <b>
          Eye
        </b>
         icon, 
        <b>
          second
        </b>
         for 
        <b>
          Arrow
        </b>
         icon and everything else for 
        <b>
          Filter
        </b>
         icon
      </span>
      <div
        className="ChipsInput"
      >
        <div
          className="container"
          onKeyDown={[Function]}
        >
          <div
            className="inputBase text inputBase"
          >
            <input
              autoComplete="off"
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Input text in here"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ChipsInput Initial Values 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="ChipsInput"
    >
      <div
        className="container"
        onKeyDown={[Function]}
      >
        <div
          className="chip focusable clickable chipStyle"
          data-testid="chip"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="label"
          >
            first
          </span>
          <button
            className="trailingIcon trailingIconClickable"
            disabled={false}
            onClick={[Function]}
          >
            <svg />
          </button>
        </div>
        <div
          className="chip focusable clickable chipStyle"
          data-testid="chip"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="label"
          >
            second
          </span>
          <button
            className="trailingIcon trailingIconClickable"
            disabled={false}
            onClick={[Function]}
          >
            <svg />
          </button>
        </div>
        <div
          className="chip focusable clickable chipStyle"
          data-testid="chip"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="leadingIcon"
          >
            <svg />
          </div>
          <span
            className="label"
          >
            third with icon
          </span>
          <button
            className="trailingIcon trailingIconClickable"
            disabled={false}
            onClick={[Function]}
          >
            <svg />
          </button>
        </div>
        <div
          className="inputBase text inputBase"
        >
          <input
            autoComplete="off"
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="+ Input text in here"
            type="text"
            value="foo"
          />
          <div
            className="trailingIcon"
          >
            <button
              aria-label="remove all"
              className="button large ghost iconButton small ghost"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                className="cancelIcon"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ChipsInput Place Holder 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="ChipsInput"
    >
      <div
        className="container"
        onKeyDown={[Function]}
      >
        <div
          className="inputBase text inputBase"
        >
          <input
            autoComplete="off"
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Custom place holder"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ChipsInput Play Ground 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="ChipsInput"
    >
      <div
        className="container"
        onKeyDown={[Function]}
      >
        <div
          className="inputBase text inputBase"
        >
          <input
            autoComplete="off"
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Place holder"
            type="text"
            value=""
          />
        </div>
      </div>
      <label
        className="helperText"
      >
         
        This is the helper text
         
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Dialog Basic 1`] = `
<div>
  <div
    className="center"
  >
    <div>
      <button
        aria-controls="menu-story-default"
        aria-haspopup="true"
        className="button large fill"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Open Dialog
      </button>
      <portal-for-test />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/IconButton Default 1`] = `
<div>
  <div
    className="center"
  >
    <button
      className="button large fill iconButton small fill"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg />
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/IconButton Disable 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="marginFlexContainer"
    >
      <button
        className="button large fill iconButton small fill"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg />
      </button>
      <button
        className="button large fill iconButton small fill"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <svg />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/IconButton Play Ground 1`] = `
<div>
  <div
    className="center"
  >
    <button
      className="button large fill iconButton small fill"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg />
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/IconButton Sizes 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="marginFlexContainer"
    >
      <button
        className="button large fill iconButton small fill"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg />
      </button>
      <button
        className="button large fill iconButton medium fill"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg />
      </button>
      <button
        className="button large fill iconButton large fill"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/IconButton Variants 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="marginFlexContainer"
    >
      <button
        className="button large fill iconButton small fill"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg />
      </button>
      <button
        className="button large outline iconButton small outline"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg />
      </button>
      <button
        className="button large ghost iconButton small ghost"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/IconButton With Class Name 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="marginFlexContainer"
    >
      <button
        className="button large fill iconButton small fill successBackgroundColor"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg />
      </button>
      <button
        className="button large outline iconButton small outline alertColor"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg />
      </button>
      <button
        className="button large ghost iconButton small ghost errorColor"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/InfiniteList Default 1`] = `
<div>
  <div
    className="center"
  >
    <div
      style={
        Object {
          "height": "300px",
          "width": "80%",
        }
      }
    >
      <div
        style={
          Object {
            "height": 0,
            "overflow": "visible",
            "width": 0,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/InputBase Default 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="inputBase text"
    >
      <input
        placeholder="Placeholder"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/InputBase Disable 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="flexMultipleRows"
    >
      <div
        className="inputBase text"
      >
        <input
          placeholder="Enabled"
          type="text"
        />
      </div>
      <div
        className="inputBase text disabled"
      >
        <input
          disabled={true}
          placeholder="Disabled"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/InputBase Playground 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="inputBase text"
    >
      <input
        disabled={false}
        onChange={[Function]}
        readOnly={false}
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/InputBase States 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="flexMultipleRows"
    >
      <div
        className="inputBase text"
      >
        <input
          defaultValue="default value"
          placeholder="readOnly"
          readOnly={true}
          type="text"
        />
      </div>
      <div
        className="inputBase text"
      >
        <input
          defaultValue="Default Value"
          type="text"
        />
      </div>
      <div
        className="inputBase password"
      >
        <input
          placeholder="Password"
          type="password"
        />
        <button
          className="button large ghost iconButton small ghost trailingIcon"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg />
        </button>
      </div>
      <div
        className="inputBase number"
      >
        <input
          placeholder="number"
          type="number"
        />
      </div>
      <div
        className="inputBase text multiline"
      >
        <textarea
          placeholder="Multiline"
          type="text"
        />
      </div>
      <div
        className="inputBase text multiline"
      >
        <textarea
          placeholder="Multiline 10 Rows"
          rows={10}
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/InputBase With Icon 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="flexMultipleRows"
    >
      <div
        className="inputBase text"
      >
        <span
          className="leadingIcon"
        >
          <svg />
        </span>
        <input
          placeholder="With Icon"
          type="text"
        />
      </div>
      <div
        className="inputBase text multiline"
      >
        <span
          className="leadingIcon"
        >
          <svg />
        </span>
        <textarea
          placeholder="With Icon"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/InputBase Withtrailing Icon 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="flexMultipleRows"
    >
      <div
        className="inputBase text"
      >
        <input
          placeholder="With Last Icon"
          type="text"
        />
        <div
          className="trailingIcon"
        >
          <button
            className="button large ghost iconButton small ghost"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <svg />
          </button>
        </div>
      </div>
      <div
        className="inputBase text multiline"
      >
        <textarea
          placeholder="With Last Icon"
          type="text"
        />
        <div
          className="trailingIcon"
        >
          <button
            className="button large ghost iconButton small ghost"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <svg />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/List Basic 1`] = `
<div>
  <div
    className="center"
  >
    <ul
      className="list"
      style={
        Object {
          "width": "400px",
        }
      }
    >
      <li
        className="listItem"
      >
        <div />
        <div
          className="content"
        >
           
          Item 1
           
        </div>
        <div />
      </li>
      <li
        className="listItem"
      >
        <div />
        <div
          className="content"
        >
           
          Item 2
           
        </div>
        <div />
      </li>
      <li
        className="listItem"
      >
        <div />
        <div
          className="content"
        >
           
          Item 3
           
        </div>
        <div />
      </li>
      <li
        className="listItem"
      >
        <div />
        <div
          className="content"
        >
           
          Item 4
           
        </div>
        <div />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Components/List With Leading 1`] = `
<div>
  <div
    className="center"
  >
    <ul
      className="list"
      style={
        Object {
          "width": "400px",
        }
      }
    >
      <li
        className="listItem"
      >
        <div>
          <label
            className="checkbox enabled"
          >
            <input
              checked={false}
              className="parent"
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            <span
              className="iconContainer"
            />
          </label>
        </div>
        <div
          className="content"
        >
           
          Item 1
           
        </div>
        <div />
      </li>
      <li
        className="listItem"
      >
        <div>
          <label
            className="checkbox enabled"
          >
            <input
              checked={false}
              className="parent"
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            <span
              className="iconContainer"
            />
          </label>
        </div>
        <div
          className="content"
        >
           
          Item 2
           
        </div>
        <div />
      </li>
      <li
        className="listItem"
      >
        <div>
          <label
            className="checkbox enabled"
          >
            <input
              checked={false}
              className="parent"
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            <span
              className="iconContainer"
            />
          </label>
        </div>
        <div
          className="content"
        >
           
          Item 3
           
        </div>
        <div />
      </li>
      <li
        className="listItem"
      >
        <div>
          <label
            className="checkbox enabled"
          >
            <input
              checked={false}
              className="parent"
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            <span
              className="iconContainer"
            />
          </label>
        </div>
        <div
          className="content"
        >
           
          Item 4
           
        </div>
        <div />
      </li>
      <li
        className="listItem"
      >
        <div>
          <label
            className="checkbox enabled"
          >
            <input
              checked={false}
              className="parent"
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            <span
              className="iconContainer"
            />
          </label>
        </div>
        <div
          className="content"
        >
           
          Item 5
           
        </div>
        <div />
      </li>
      <li
        className="listItem"
      >
        <div>
          <label
            className="checkbox enabled"
          >
            <input
              checked={false}
              className="parent"
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            <span
              className="iconContainer"
            />
          </label>
        </div>
        <div
          className="content"
        >
           
          Item 6
           
        </div>
        <div />
      </li>
      <li
        className="listItem"
      >
        <div>
          <label
            className="checkbox enabled"
          >
            <input
              checked={false}
              className="parent"
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            <span
              className="iconContainer"
            />
          </label>
        </div>
        <div
          className="content"
        >
           
          Item 7
           
        </div>
        <div />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Components/List With Trailing 1`] = `
<div>
  <div
    className="center"
  >
    <ul
      className="list"
      style={
        Object {
          "width": "400px",
        }
      }
    >
      <li
        className="listItem"
      >
        <div />
        <div
          className="content"
        >
           
          Item 1
           
        </div>
        <div>
          <button
            className="button small fill"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Edit
          </button>
        </div>
      </li>
      <li
        className="listItem"
      >
        <div />
        <div
          className="content"
        >
           
          Item 2
           
        </div>
        <div>
          <button
            className="button small fill"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Edit
          </button>
        </div>
      </li>
      <li
        className="listItem"
      >
        <div />
        <div
          className="content"
        >
           
          Item 3
           
        </div>
        <div>
          <button
            className="button small fill"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Edit
          </button>
        </div>
      </li>
      <li
        className="listItem"
      >
        <div />
        <div
          className="content"
        >
           
          Item 4
           
        </div>
        <div>
          <button
            className="button small fill"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Edit
          </button>
        </div>
      </li>
      <li
        className="listItem"
      >
        <div />
        <div
          className="content"
        >
           
          Item 5
           
        </div>
        <div>
          <button
            className="button small fill"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Edit
          </button>
        </div>
      </li>
      <li
        className="listItem"
      >
        <div />
        <div
          className="content"
        >
           
          Item 6
           
        </div>
        <div>
          <button
            className="button small fill"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Edit
          </button>
        </div>
      </li>
      <li
        className="listItem"
      >
        <div />
        <div
          className="content"
        >
           
          Item 7
           
        </div>
        <div>
          <button
            className="button small fill"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Edit
          </button>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Components/Menu Default 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="menuExample"
    >
      <button
        aria-controls="menu-story-default"
        aria-haspopup="true"
        className="button large fill"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Pizza Toppings
      </button>
      <portal-for-test>
        <div
          className="menuContainer"
        />
      </portal-for-test>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Menu Different Positions 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="menuExample"
    >
      <button
        aria-controls="menu-story"
        aria-haspopup="true"
        className="button large fill"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "left": 10,
            "position": "absolute",
            "top": 10,
          }
        }
        type="button"
      >
        Top, Left
      </button>
      <button
        aria-controls="menu-story"
        aria-haspopup="true"
        className="button large fill"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "position": "absolute",
            "right": 10,
            "top": 10,
          }
        }
        type="button"
      >
        Top, Right
      </button>
      <button
        aria-controls="menu-story"
        aria-haspopup="true"
        className="button large fill"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "bottom": 10,
            "left": 10,
            "position": "absolute",
          }
        }
        type="button"
      >
        Bottom, Left
      </button>
      <button
        aria-controls="menu-story"
        aria-haspopup="true"
        className="button large fill"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "bottom": 10,
            "position": "absolute",
            "right": 10,
          }
        }
        type="button"
      >
        Bottom, Right
      </button>
      <div
        className="tinyText"
      >
        Best viewed in canvas mode
      </div>
      <portal-for-test>
        <div
          className="menuContainer"
        />
      </portal-for-test>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Menu Prefer Open To Direction 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="menuExample"
    >
      <button
        aria-controls="menu-story"
        aria-haspopup="true"
        className="button large fill"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Open Menu
      </button>
      <portal-for-test>
        <div
          className="menuContainer"
        />
      </portal-for-test>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Menu Variants 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="menuExample"
    >
      <div
        className="microMargin"
      >
        <button
          aria-controls="menu-story-regular"
          aria-haspopup="true"
          className="button large fill"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Regular
        </button>
        <portal-for-test>
          <div
            className="menuContainer"
          />
        </portal-for-test>
      </div>
      <div
        className="microMargin"
      >
        <button
          aria-controls="menu-story-dense"
          aria-haspopup="true"
          className="button large fill"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Dense
        </button>
        <portal-for-test>
          <div
            className="menuContainer"
          />
        </portal-for-test>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Menu With Sub Menus 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="menuExample"
    >
      <button
        aria-controls="menu-story-submenu"
        aria-haspopup="true"
        className="button large fill"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Open Menu
      </button>
      <portal-for-test>
        <div
          className="menuContainer"
        />
      </portal-for-test>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Radio Default 1`] = `
<div>
  <div
    className="center"
  >
    <label
      className="radio"
      htmlFor="radio-example"
    >
      <input
        checked={false}
        disabled={false}
        id="radio-example"
        onChange={[Function]}
        type="radio"
      />
      <span
        className="iconContainer"
      />
    </label>
    <label
      className="checkboxLabel"
      htmlFor="radio-example"
    >
      Check me out!
    </label>
  </div>
</div>
`;

exports[`Storyshots Components/Radio Playground 1`] = `
<div>
  <div
    className="center"
  >
    <label
      className="radio"
      htmlFor="radio-playground"
    >
      <input
        checked={false}
        disabled={false}
        id="radio-playground"
        onChange={[Function]}
        type="radio"
      />
      <span
        className="iconContainer"
      />
    </label>
    <label
      className="checkboxLabel"
      htmlFor="radio-playground"
    >
      Hit me!
    </label>
  </div>
</div>
`;

exports[`Storyshots Components/Radio States 1`] = `
<div>
  <div
    className="center"
  >
    <label
      className="radio checked microMargin"
    >
      <input
        checked={true}
        disabled={false}
        onChange={[Function]}
        type="radio"
      />
      <span
        className="iconContainer"
      >
        <span
          className="circle"
        />
      </span>
    </label>
    <label
      className="radio microMargin"
    >
      <input
        checked={false}
        disabled={false}
        onChange={[Function]}
        type="radio"
      />
      <span
        className="iconContainer"
      />
    </label>
    <label
      className="radio checked disabled microMargin"
    >
      <input
        checked={true}
        disabled={true}
        onChange={[Function]}
        type="radio"
      />
      <span
        className="iconContainer"
      >
        <span
          className="circle"
        />
      </span>
    </label>
    <label
      className="radio disabled microMargin"
    >
      <input
        checked={false}
        disabled={true}
        onChange={[Function]}
        type="radio"
      />
      <span
        className="iconContainer"
      />
    </label>
  </div>
</div>
`;

exports[`Storyshots Components/SSF Default 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="marginFlexContainer"
    >
      <div
        className="SmartFilter"
      >
        <div
          className="elevationOverlay"
        />
        <button
          className="button large fill searchFilter"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg />
        </button>
        <portal-for-test>
          <div
            className="menuContainer"
          />
        </portal-for-test>
        <div
          className="ChipsInput chipInput"
        >
          <div
            className="container"
            onKeyDown={[Function]}
          >
            <div
              className="inputBase text inputBase"
            >
              <input
                autoComplete="off"
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Add tag to filter or free type to search"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/SSF Without Menu Fields 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="marginFlexContainer"
    >
      <div
        className="SmartFilter"
      >
        <div
          className="elevationOverlay"
        />
        <button
          className="button large fill searchFilter"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg />
        </button>
        <portal-for-test>
          <div
            className="menuContainer"
          />
        </portal-for-test>
        <div
          className="ChipsInput chipInput"
        >
          <div
            className="container"
            onKeyDown={[Function]}
          >
            <div
              className="inputBase text inputBase"
            >
              <input
                autoComplete="off"
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Add tag to filter or free type to search"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/SkeletonLoader Default 1`] = `
<div>
  <div
    className="center"
  >
    <div
      style={
        Object {
          "width": "500px",
        }
      }
    >
      <div
        className="skeletonLoader microMargin"
        style={
          Object {
            "height": "30px",
            "width": "30px",
          }
        }
      />
      <div
        className="skeletonLoader microMargin"
      />
      <div
        className="skeletonLoader microMargin"
      />
      <div
        className="skeletonLoader microMargin"
      />
      <div
        className="skeletonLoader microMargin"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Snackbar Action 1`] = `
<div>
  <div
    className="center"
  >
    <button
      className="button large fill"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      With Action
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Snackbar Close Icon 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="marginFlexContainer"
    >
      <button
        className="button large fill"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Default Icon
      </button>
      <button
        className="button large fill"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Custom Icon
      </button>
      <button
        className="button large fill"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Without Icon
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Snackbar Default 1`] = `
<div>
  <div
    className="center"
  >
    <button
      className="button large fill"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Open
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Snackbar Leading Icon 1`] = `
<div>
  <div
    className="center"
  >
    <button
      className="button large fill"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      With Leading Icon
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Switch Default 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="marginFlexContainer"
    >
      <div
        className="switch enabled"
      >
        <label
          className="switchLabel"
          htmlFor="switch-example"
        >
          <div
            className="switchLine"
          />
          <div
            className="switchToggle"
          >
            <span
              className="switchToggleInner"
            />
            <input
              defaultChecked={true}
              disabled={false}
              id="switch-example"
              onChange={[Function]}
              type="checkbox"
            />
          </div>
        </label>
      </div>
      <label
        htmlFor="switch-example"
      >
        Check me out!
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Switch Multiple Switches 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="marginFlexContainer"
    >
      <div
        className="switch unchecked enabled"
      >
        <label
          className="switchLabel"
          htmlFor="switch-example1"
        >
          <div
            className="switchLine"
          />
          <div
            className="switchToggle"
          >
            <span
              className="switchToggleInner"
            />
            <input
              defaultChecked={false}
              disabled={false}
              id="switch-example1"
              onChange={[Function]}
              type="checkbox"
            />
          </div>
        </label>
      </div>
      <div
        className="switch enabled"
      >
        <label
          className="switchLabel"
          htmlFor="switch-example2"
        >
          <div
            className="switchLine"
          />
          <div
            className="switchToggle"
          >
            <span
              className="switchToggleInner"
            />
            <input
              defaultChecked={true}
              disabled={false}
              id="switch-example2"
              onChange={[Function]}
              type="checkbox"
            />
          </div>
        </label>
      </div>
      <div
        className="switch unchecked disabled"
      >
        <label
          className="switchLabel"
          htmlFor="switch-example3"
        >
          <div
            className="switchLine"
          />
          <div
            className="switchToggle"
          >
            <span
              className="switchToggleInner"
            />
            <input
              defaultChecked={false}
              disabled={true}
              id="switch-example3"
              onChange={[Function]}
              type="checkbox"
            />
          </div>
        </label>
      </div>
      <div
        className="switch disabled"
      >
        <label
          className="switchLabel"
          htmlFor="switch-example4"
        >
          <div
            className="switchLine"
          />
          <div
            className="switchToggle"
          >
            <span
              className="switchToggleInner"
            />
            <input
              defaultChecked={true}
              disabled={true}
              id="switch-example4"
              onChange={[Function]}
              type="checkbox"
            />
          </div>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Switch Playground 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="marginFlexContainer"
    >
      <div
        className="switch unchecked enabled"
      >
        <label
          className="switchLabel"
          htmlFor="switch-playground"
        >
          <div
            className="switchLine"
          />
          <div
            className="switchToggle"
          >
            <span
              className="switchToggleInner"
            />
            <input
              defaultChecked={false}
              disabled={false}
              id="switch-playground"
              onChange={[Function]}
              type="checkbox"
            />
          </div>
        </label>
      </div>
      <label
        htmlFor="switch-playground"
      >
        Hit me!
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Table Basic 1`] = `
<div>
  <div
    className="table"
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  >
    <div
      className="SmartFilter TableSSF"
    >
      <div
        className="elevationOverlay"
      />
      <button
        className="button large fill searchFilter"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg />
      </button>
      <portal-for-test>
        <div
          className="menuContainer"
        />
      </portal-for-test>
      <div
        className="ChipsInput chipInput"
      >
        <div
          className="container"
          onKeyDown={[Function]}
        >
          <div
            className="inputBase text inputBase"
          >
            <input
              autoComplete="off"
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Add tag to filter or free type to search"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="results"
      >
        0
         
        Results
      </div>
      <div
        className="tableHeader"
        role="row"
      />
    </div>
    <div
      className="tableBody"
    >
      <div
        style={
          Object {
            "height": 0,
            "overflow": "visible",
            "width": 0,
          }
        }
      />
    </div>
    <portal-for-test />
  </div>
</div>
`;

exports[`Storyshots Components/Table Infinite Scroll 1`] = `
<div>
  <div
    className="table"
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  >
    <div>
      <div
        className="results"
      >
        0
         
        Results
      </div>
      <div
        className="tableHeader"
        role="row"
      />
    </div>
    <div
      className="tableBody"
    >
      <div
        style={
          Object {
            "height": 0,
            "overflow": "visible",
            "width": 0,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/TextField Disabled 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="flexMultipleRows"
    >
      <div
        className="container"
      >
        <div
          className="TextField outline text medium disabled"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
        >
          <label
            className="label left"
          >
            disabled
          </label>
          <div
            className="inputBase text disabled inputBase bottom"
          >
            <span
              className="leadingIcon leadingIcon"
            >
              <svg />
            </span>
            <input
              disabled={true}
              id="textField-9"
              onChange={[Function]}
              readOnly={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="container"
      >
        <div
          className="TextField fill text medium disabled"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
        >
          <label
            className="label left"
          >
            disabled
          </label>
          <div
            className="inputBase text disabled inputBase bottom"
          >
            <span
              className="leadingIcon leadingIcon"
            >
              <svg />
            </span>
            <input
              disabled={true}
              id="textField-10"
              onChange={[Function]}
              readOnly={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/TextField Play Ground 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="flexMultipleRows"
    >
      <div
        className="container"
      >
        <div
          className="TextField outline text medium"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
        >
          <label
            className="label"
          >
            placeholder
          </label>
          <div
            className="inputBase text inputBase bottom"
          >
            <input
              id="textField-26"
              onChange={[Function]}
              readOnly={false}
              type="text"
              value=""
            />
          </div>
        </div>
        <span
          className="message"
        >
          message
        </span>
      </div>
      <div
        className="container"
      >
        <div
          className="TextField fill text medium"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
        >
          <label
            className="label"
          >
            placeholder
          </label>
          <div
            className="inputBase text inputBase bottom"
          >
            <input
              id="textField-27"
              onChange={[Function]}
              readOnly={false}
              type="text"
              value=""
            />
          </div>
        </div>
        <span
          className="message"
        >
          message
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/TextField Sizes 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="flexMultipleRows"
    >
      <div
        className="container"
      >
        <div
          className="TextField outline text medium notEmpty"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
        >
          <label
            className="label"
          >
            placeholder
          </label>
          <div
            className="inputBase text inputBase bottom"
          >
            <input
              id="textField-3"
              onChange={[Function]}
              readOnly={false}
              type="text"
              value="medium"
            />
          </div>
        </div>
      </div>
      <div
        className="container"
      >
        <div
          className="TextField fill text small notEmpty"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
        >
          <label
            className="label"
          >
            placeholder
          </label>
          <div
            className="inputBase text inputBase bottom"
          >
            <input
              id="textField-4"
              onChange={[Function]}
              readOnly={false}
              type="text"
              value="small"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/TextField Type Options 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="flexMultipleRows"
    >
      <div
        className="container"
      >
        <div
          className="TextField outline options medium notEmpty"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
        >
          <label
            className="label"
          />
          <div
            className="inputBase options inputBase"
          >
            <input
              id="textField-21"
              onChange={[Function]}
              readOnly={true}
              type="options"
              value="Olives"
            />
            <div
              className="trailingIcon trailingIcon"
            >
              <svg />
            </div>
          </div>
        </div>
        <portal-for-test>
          <div
            className="menuContainer"
          />
        </portal-for-test>
      </div>
      <div
        className="container"
      >
        <div
          className="TextField fill options medium notEmpty"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
        >
          <label
            className="label"
          />
          <div
            className="inputBase options inputBase"
          >
            <input
              id="textField-22"
              onChange={[Function]}
              readOnly={true}
              type="options"
              value="Olives"
            />
            <div
              className="trailingIcon trailingIcon"
            >
              <svg />
            </div>
          </div>
        </div>
        <portal-for-test>
          <div
            className="menuContainer"
          />
        </portal-for-test>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/TextField Type Password 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="flexMultipleRows"
    >
      <div
        className="container"
      >
        <div
          className="TextField outline password medium notEmpty"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
        >
          <label
            className="label"
          />
          <div
            className="inputBase password inputBase"
          >
            <input
              id="textField-24"
              onChange={[Function]}
              readOnly={false}
              type="password"
              value="secret"
            />
            <button
              className="button large ghost iconButton small ghost trailingIcon trailingIcon"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/TextField With Default Value 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="flexMultipleRows"
    >
      <div
        className="container"
      >
        <div
          className="TextField outline text medium notEmpty"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
        >
          <label
            className="label"
          >
            placeholder
          </label>
          <div
            className="inputBase text inputBase bottom"
          >
            <input
              id="textField-1"
              onChange={[Function]}
              readOnly={false}
              type="text"
              value="default value"
            />
          </div>
        </div>
      </div>
      <div
        className="container"
      >
        <div
          className="TextField fill text medium notEmpty"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
        >
          <label
            className="label"
          >
            placeholder
          </label>
          <div
            className="inputBase text inputBase bottom"
          >
            <input
              id="textField-2"
              onChange={[Function]}
              readOnly={false}
              type="text"
              value="default value"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/TextField With Error 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="flexMultipleRows"
    >
      <div
        className="container"
      >
        <div
          className="TextField outline text medium error"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
        >
          <label
            className="label"
          >
            placeholder
          </label>
          <div
            className="inputBase text inputBase bottom"
          >
            <input
              id="textField-15"
              onChange={[Function]}
              readOnly={false}
              type="text"
              value=""
            />
            <div
              className="trailingIcon trailingIcon"
            >
              <svg />
            </div>
          </div>
        </div>
        <span
          className="message error"
        >
          This is an error
        </span>
      </div>
      <div
        className="container"
      >
        <div
          className="TextField fill text medium error"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
        >
          <label
            className="label"
          >
            placeholder
          </label>
          <div
            className="inputBase text inputBase bottom"
          >
            <input
              id="textField-16"
              onChange={[Function]}
              readOnly={false}
              type="text"
              value=""
            />
            <div
              className="trailingIcon trailingIcon"
            >
              <svg />
            </div>
          </div>
        </div>
        <span
          className="message error"
        >
          This is an error
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/TextField With Leading Icon 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="flexMultipleRows"
    >
      <div
        className="container"
      >
        <div
          className="TextField outline text medium"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
        >
          <label
            className="label left"
          >
            With leading Icon
          </label>
          <div
            className="inputBase text inputBase bottom"
          >
            <span
              className="leadingIcon leadingIcon"
            >
              <svg />
            </span>
            <input
              id="textField-7"
              onChange={[Function]}
              readOnly={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="container"
      >
        <div
          className="TextField fill text medium"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
        >
          <label
            className="label left"
          >
            With leading Icon
          </label>
          <div
            className="inputBase text inputBase bottom"
          >
            <span
              className="leadingIcon leadingIcon"
            >
              <svg />
            </span>
            <input
              id="textField-8"
              onChange={[Function]}
              readOnly={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/TextField With Message 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="flexMultipleRows"
    >
      <div
        className="container"
      >
        <div
          className="TextField outline text medium"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
        >
          <label
            className="label"
          >
            placeholder
          </label>
          <div
            className="inputBase text inputBase bottom"
          >
            <input
              id="textField-13"
              onChange={[Function]}
              readOnly={false}
              type="text"
              value=""
            />
            <div
              className="trailingIcon trailingIcon"
            >
              <svg />
            </div>
          </div>
        </div>
        <span
          className="message"
        >
          Optional helper text goes here
        </span>
      </div>
      <div
        className="container"
      >
        <div
          className="TextField fill text medium"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
        >
          <label
            className="label"
          >
            placeholder
          </label>
          <div
            className="inputBase text inputBase bottom"
          >
            <input
              id="textField-14"
              onChange={[Function]}
              readOnly={false}
              type="text"
              value=""
            />
            <div
              className="trailingIcon trailingIcon"
            >
              <svg />
            </div>
          </div>
        </div>
        <span
          className="message"
        >
          Optional helper text goes here
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/TextField With Multiline 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="flexMultipleRows"
    >
      <div
        className="container"
      >
        <div
          className="TextField outline text medium multiline"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
        >
          <label
            className="label"
          >
            placeholder
          </label>
          <div
            className="inputBase text multiline inputBase bottom"
          >
            <textarea
              id="textField-17"
              onChange={[Function]}
              readOnly={false}
              rows={5}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="container"
      >
        <div
          className="TextField fill text medium multiline"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
        >
          <label
            className="label"
          >
            placeholder
          </label>
          <div
            className="inputBase text multiline inputBase bottom"
          >
            <textarea
              id="textField-18"
              onChange={[Function]}
              readOnly={false}
              rows={5}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/TextField With Read Only 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="flexMultipleRows"
    >
      <div
        className="container"
      >
        <div
          className="TextField outline text medium readOnly notEmpty"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
        >
          <label
            className="label"
          >
            This is read only text
          </label>
          <div
            className="inputBase text inputBase bottom"
          >
            <input
              id="textField-19"
              onChange={[Function]}
              readOnly={true}
              type="text"
              value="text"
            />
            <div
              className="trailingIcon trailingIcon"
            >
              <svg />
            </div>
          </div>
        </div>
      </div>
      <div
        className="container"
      >
        <div
          className="TextField fill text medium readOnly notEmpty"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
        >
          <label
            className="label"
          >
            This is read only text
          </label>
          <div
            className="inputBase text inputBase bottom"
          >
            <input
              id="textField-20"
              onChange={[Function]}
              readOnly={true}
              type="text"
              value="text"
            />
            <div
              className="trailingIcon trailingIcon"
            >
              <svg />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/TextField With Render Item 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="flexMultipleRows"
    >
      <div
        className="container"
      >
        <div
          className="TextField outline options medium notEmpty"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
        >
          <label
            className="label"
          />
          <div
            className="inputBase options inputBase"
          >
            <input
              id="textField-25"
              onChange={[Function]}
              readOnly={true}
              type="options"
              value="Olives"
            />
            <div
              className="trailingIcon trailingIcon"
            >
              <svg />
            </div>
          </div>
        </div>
        <portal-for-test>
          <div
            className="menuContainer"
          />
        </portal-for-test>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/TextField With Trailing Icon 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="flexMultipleRows"
    >
      <div
        className="container"
      >
        <div
          className="TextField outline text medium"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
        >
          <label
            className="label"
          />
          <div
            className="inputBase text inputBase"
          >
            <input
              id="textField-11"
              onChange={[Function]}
              readOnly={false}
              type="text"
              value=""
            />
            <div
              className="trailingIcon trailingIcon"
            >
              <svg />
            </div>
          </div>
        </div>
      </div>
      <div
        className="container"
      >
        <div
          className="TextField fill text medium"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
        >
          <label
            className="label"
          />
          <div
            className="inputBase text inputBase"
          >
            <input
              id="textField-12"
              onChange={[Function]}
              readOnly={false}
              type="text"
              value=""
            />
            <div
              className="trailingIcon trailingIcon"
            >
              <svg />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/TextField With Value 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="flexMultipleRows"
    >
      <div
        className="container"
      >
        <div
          className="TextField outline text medium notEmpty"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
        >
          <label
            className="label"
          >
            placeholder
          </label>
          <div
            className="inputBase text inputBase bottom"
          >
            <input
              id="textField-23"
              onChange={[Function]}
              readOnly={false}
              type="text"
              value="Olives"
            />
            <div
              className="trailingIcon trailingIcon"
            >
              <svg />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Tooltip Arrow Variations 1`] = `
<div>
  <div
    className="center"
  >
    <div
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      <h6>
        Left
      </h6>
      <div
        className="popperContainer"
        hidden={true}
        onMouseEnter={null}
        onMouseLeave={null}
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      >
        <p>
          left
        </p>
        <div
          className="popperArrow"
        />
      </div>
      <h6>
        Top
      </h6>
      <div
        className="popperContainer"
        hidden={true}
        onMouseEnter={null}
        onMouseLeave={null}
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      >
        <p>
          top
        </p>
        <div
          className="popperArrow"
        />
      </div>
      <h6>
        Bottom
      </h6>
      <div
        className="popperContainer"
        hidden={true}
        onMouseEnter={null}
        onMouseLeave={null}
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      >
        <p>
          bottom
        </p>
        <div
          className="popperArrow"
        />
      </div>
      <h6>
        Right
      </h6>
      <div
        className="popperContainer"
        hidden={true}
        onMouseEnter={null}
        onMouseLeave={null}
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      >
        <p>
          right
        </p>
        <div
          className="popperArrow"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Tooltip Default 1`] = `
<div>
  <div
    className="center"
  >
    <h6>
      Hover over me!
    </h6>
    <div
      className="popperContainer"
      hidden={true}
      onMouseEnter={null}
      onMouseLeave={null}
      style={
        Object {
          "left": "0",
          "position": "absolute",
          "top": "0",
        }
      }
    >
      <p>
        I'm a tooltip!
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Tooltip Interactive 1`] = `
<div>
  <div
    className="center"
  >
    <h6>
      Hover over me!
    </h6>
    <div
      className="popperContainer"
      hidden={true}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "left": "0",
          "position": "absolute",
          "top": "0",
        }
      }
    >
      <p
        className="tooltipTitle"
      >
        Hover me!
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing
      </p>
      <div>
        <div
          style={
            Object {
              "display": "flex",
              "justifyContent": "space-between",
              "marginTop": "20px",
            }
          }
        >
          <button
            className="button small ghost"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Skip
          </button>
          <button
            className="button small fill"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Next
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Style/Colors Additional 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="colors"
    >
      <div
        className="sirius"
      >
        Sirius
      </div>
      <div
        className="earth"
      >
        Earth
      </div>
      <div
        className="procyon"
      >
        Procyon
      </div>
      <div
        className="sun"
      >
        Sun
      </div>
      <div
        className="canopus"
      >
        Canopus
      </div>
      <div
        className="achernar"
      >
        Achernar
      </div>
      <div
        className="altair"
      >
        Altair
      </div>
      <div
        className="antares"
      >
        Antares
      </div>
      <div
        className="vega"
      >
        Vega
      </div>
      <div
        className="betelgeuse"
      >
        Betelgeuse
      </div>
      <div
        className="aldebaran"
      >
        Aldebaran
      </div>
      <div
        className="pollux"
      >
        Pollux
      </div>
      <div
        className="rigel"
      >
        Rigel
      </div>
      <div
        className="agena"
      >
        Agena
      </div>
      <div
        className="spica"
      >
        Spica
      </div>
      <div
        className="mimosa"
      >
        Mimosa
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Style/Colors Base 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="colors"
    >
      <div
        className="primary"
      >
        Primary
      </div>
      <div
        className="secondary"
      >
        Secondary
      </div>
      <div
        className="accent"
      >
        Accent
      </div>
      <div
        className="decorative"
      >
        Decorative
      </div>
      <div
        className="content"
      >
        Content
      </div>
      <div
        className="surface"
      >
        Surface
      </div>
      <div
        className="purewhite"
      >
        Pure White
      </div>
      <div
        className="trueblack"
      >
        True Black
      </div>
      <div
        className="success"
      >
        Success
      </div>
      <div
        className="alert"
      >
        Alert
      </div>
      <div
        className="error"
      >
        Error
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Style/Colors Elevation 1`] = `
<div>
  <div
    className="center"
  >
    <div>
      <div
        className="colors elevation"
      >
        <div
          className="raised"
        >
          raised
        </div>
        <div
          className="overlay"
        >
          overlay
        </div>
        <div
          className="sticky"
        >
          sticky
        </div>
        <div
          className="temporary"
        >
          temporary
        </div>
        <div
          className="popOut"
        >
          pop-out
        </div>
      </div>
      <center>
        <h6>
          Try to use the theme toggle :)
        </h6>
      </center>
    </div>
  </div>
</div>
`;

exports[`Storyshots Utils/FileUpload Basic 1`] = `
<div>
  <div
    className="center"
  >
    <input
      className="hide"
      onChange={[Function]}
      onClick={[Function]}
      type="file"
    />
    <button
      className="button large fill"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Upload File
    </button>
  </div>
</div>
`;

exports[`Storyshots Utils/FileUpload Just Image 1`] = `
<div>
  <div
    className="center"
  >
    <input
      accept="image/*"
      className="hide"
      onChange={[Function]}
      onClick={[Function]}
      type="file"
    />
    <button
      className="button large fill"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Upload Images
    </button>
  </div>
</div>
`;

exports[`Storyshots Utils/FileUpload Multiple 1`] = `
<div>
  <div
    className="center"
  >
    <input
      className="hide"
      multiple={true}
      onChange={[Function]}
      onClick={[Function]}
      type="file"
    />
    <button
      className="button large fill"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Upload Files
    </button>
  </div>
</div>
`;

exports[`Storyshots Utils/Portal Default 1`] = `
<div>
  <portal-for-test>
    <h3>
      Inspect Me. Im on the body
    </h3>
  </portal-for-test>
</div>
`;
